<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F4F4"
        tools:context=".LoginActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@color/colorTwelve"
            android:layout_height="180dp">

        <TextView
                android:id="@+id/titlepage"
                android:layout_marginTop="50dp"
                android:textSize="26sp"
                android:textColor="#FFFFFF"
                android:text="@string/textLogin"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/titlepagetwo"
                android:layout_marginTop="-15dp"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                android:text="@string/textWelcomeLogin"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="-60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bgitemdoes"
            android:orientation="vertical"
            android:paddingBottom="22dp"
            android:paddingTop="22dp">

        <LinearLayout
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/inputEmailLogin"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/bginputtask"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textColorHint="#B5B5B5"
                    android:textColor="@color/colorTwelve"
                    android:hint="@string/hintEmail"
                    android:layout_width="match_parent"
                    android:layout_height="55dp" />

        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/inputPasswordLogin"
                    android:inputType="textPassword"
                    android:background="@drawable/bginputtask"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textColorHint="#B5B5B5"
                    android:textColor="@color/colorTwelve"
                    android:hint="@string/hintPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp" />

        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/txtLupaPassword"
                    android:textColorHint="#B5B5B5"
                    android:hint="@string/textLupaPassword"
                    android:textAlignment="textStart"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/txtBelumPunyaAkun"
                    android:textColorHint="#B5B5B5"
                    android:hint="@string/textBelumPunyaAkun"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <Button
            android:id="@+id/btnLogin"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/textLogin"
            android:textColor="#FFF"
            android:textAllCaps="false"
            android:background="@drawable/bgbtnlogin"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="55dp" />

    <Button
            android:id="@+id/btnCancel"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/textCancel"
            android:textColor="@color/colorThree"
            android:textAllCaps="false"
            android:background="@drawable/bgbtncancel"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="55dp" />

</LinearLayout>